--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.0",
+    "bootstrap": "^5.3.2",
     "eslint-config-react-app": "^7.0.1",
     "install": "^0.13.0",
     "module": "^1.2.5",
